--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Panic Button</string>
     <string name="action_settings">Settings</string>
     <string name="logout">Logout</string>
+    <string name="new_account">Criar uma nova conta</string>
 </resources>
